engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__fragment_definitions.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	repository(name: "api", owner: "grafbase") {
		__typename
		pullRequest(number: 2129) {
			__typename
			... fields
		}

	}

}
fragment fields on PullRequest {
	id
	changedFiles
}

