engine/crates/engine/src/registry/resolvers/graphql/snapshots/engine__registry__resolvers__graphql__serializer__tests__inline_fragment@query { ... @include(if $foo) { bar } }.snap
---
source: crates/engine/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query($foo: Bool = true) {
	... @include(if: $foo) {
		__typename
		bar
	}
}

